Fix the edit screen visiblity of the Quote block

--- a/frontend/src/components/Blocks/Quoteblock/css/quote.less
+++ b/frontend/src/components/Blocks/Quoteblock/css/quote.less
@@ -67,3 +67,29 @@
     }
   }
 }
+
+
+#page-edit {
+  .block-editor-Quoteblock {
+    background-color: white;
+    width: 95vw !important;
+
+  }
+}
+
+.has-sidebar #page-edit {
+  .block-editor-Quoteblock {
+    width: 83vw !important;
+  }
+}
+// .renderer-wrapper.selected::before {
+//   position: absolute;
+//   z-index: -1;
+//   top: -5px;
+//   left: -5px;
+//   width: calc(100% + 10px);
+//   height: calc(100% + 10px);
+//   border: 1px solid rgba(120, 192, 215, 0.5);
+//   border-radius: 3px;
+//   content: '';
+// }
